# obsidian-qdrant

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  create_collection_text_dense.py  docker-compose.yml  main.py  pyproject.toml  readme_en.md
